Bug 342702 - Middle-click incorrectly opens panel popup context menu including label-less action
Summary: Middle-click incorrectly opens panel popup context menu including label-less ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Kubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-10 16:40 UTC by André Marcelo Alvarenga
Modified: 2015-01-11 16:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (85.14 KB, image/png)
2015-01-10 16:41 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2015-01-10 16:40:27 UTC
See screenshot.

Press mouse wheel on any groups name or icon to open the context menu.
There is a option with no label (below Alternatives... option) that does nothing.

This context menu do not show 'Panel Options      >', visible if you right click on "K" icon.

Reproducible: Always
Comment 1 André Marcelo Alvarenga 2015-01-10 16:41:07 UTC
Created attachment 90324 [details]
Screenshot
Comment 2 Eike Hein 2015-01-10 16:43:45 UTC
Not specific to Kicker, this also happens e.g. in the system tray popup (and the context menu shouldn't even open on middle-click). Reassigning to General.
Comment 3 Kai Uwe Broulik 2015-01-11 16:52:29 UTC
Git commit 7476decf2987e3f6f1a1c5840fad37d12090facc by Kai Uwe Broulik.
Committed on 11/01/2015 at 16:50.
Pushed by broulik into branch 'master'.

Fix errorneously opening a broken context menu when middle clicking Plasma popup

M  +14   -1    src/scriptengines/qml/plasmoid/appletinterface.cpp

http://commits.kde.org/plasma-framework/7476decf2987e3f6f1a1c5840fad37d12090facc