Fix errorneously opening a broken context menu when middle clicking Plasma popup

BUG: 342702